# ophix-lang-ru-creds

./: README.md  gen_version.py  pyproject.toml
src/ophix_lang_ru_creds/: _version.py  apps.py
src/ophix_lang_ru_creds/docs/: credentials.md  legacy-upgrade.md  sections.yaml
src/ophix_lang_ru_creds/locale/ru/LC_MESSAGES/: django.mo  django.po
