[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ophix-lang-ru-creds"
version = "2026.04.25.01"
description = "Russian translation pack for ophix-creds"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ophix Project" }
]
dependencies = [
    "ophix-creds",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ophix_lang_ru_creds = [
    "locale/**/*",
    "docs/**/*",
]

[project.entry-points."ophix.plugins"]
ophix_lang_ru_creds = "ophix_lang_ru_creds"
